--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,12 +1,15 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809463.md#1" target="_blank">太空人在太空中为地球上的小孩读床边故事</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/iss053e210425-320x200.jpg" align ="left"></a>为人父母者在孩子睡觉前读床边故事给他们听，有助于增进他们的文学、词汇和想像能力。但并非每个家长都愿意或有时间这么做。现在，在教育学家和太空人的协助之下，您的小孩也能听到太空人在太空中为他们所读的床边故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:08 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809816.md#1" target="_blank">高端房市 有理由对2020乐观看待（下）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809816.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eaba50114b886a_ttl7dayqpY_shutterstock_530763871-150x120.jpg" align ="left"></a>编译：艾薇?大纪元
+去年世界各地的高端房市表现不佳，受到全球局势动荡的影响，产生经济衰退的忧虑，但所幸美股表现强劲，全球经济并无陷入泥沼。今年高端房市的表现依然会与世界政经事件产生紧密牵动，以下根据Mansion Global，针对2020年，主要城市的豪宅房市进行了展望：本周下篇表述伦敦、悉尼和迪拜的概况。
+伦敦.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 10:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807498.md#1" target="_blank">繁殖场救出的贵宾犬不会躺床睡觉 网友：心都碎了</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/af68e123b1ff324d7d677e203e13fbc6-150x120.jpg" align ="left"></a>一只白色贵宾犬的视频在网路上流传，视频中，那只幼犬把头靠在狗窝上，然后站在那边睡觉，最后被自己摇晃惊醒了；这一幕让照顾它的梅丽莎?伦茨（Melissa Lentz）和网友看得心都碎了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 5:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809704.md#1" target="_blank">长相滑稽的小狗在网上走红 最终被人收养</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-84042260-150x120.jpg" align ="left"></a>美国一只小狗因为长相滑稽、有点斗鸡眼，在动物收容所待了两年，一直没有人愿意收养。最近，该收容所在网上分享它的照片，没想到让它一炮而红，最终还找到新家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807549.md#1" target="_blank">小美人鱼的宝物！济州岛梦幻“贝壳水晶球”　</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807549.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/41e33cc87e258daeb76b39d25a0d32a7-150x120.jpg" align ="left"></a>你看它不就是专为小美人鱼设计的宝物吗？济州岛本土品牌“Salon de badang”，主要贩售海洋香薰蜡烛，将满满的济州岛风情收进手作蜡烛里；这次推出浪漫极品--“贝壳水晶球”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809527.md#1" target="_blank">【AUSTPRO珀斯房地产专栏】2020年房地产出售策略</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809527.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c8c3d8b616889cb3f298e5efa931414a-150x120.jpg" align ="left"></a>根据RP Data最新数据显示，珀斯与其它首府城市一样，在2020年房价有微长的迹象。如果你有意在今年年出售房地产，以下4个策略与你分享，希望你能够找到最好的买家，卖出最高价位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809328.md#1" target="_blank">研究：孕期饮食脂肪较高影响孩子未来健康</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809328.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1501112248472483-150x120.jpg" align ="left"></a>悉尼大学研究人员称，母亲在孕期摄入的脂肪可能会影响孩子未来的健康，含较高脂肪的饮食对孩子的生长发育，以及后天罹患多种疾病的风险息息相关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 2:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank">武汉肺炎证实人传人 冠状病毒之父：2要点防范</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809002.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wuhan-novel-coronavirus-laimingzhao-150x120.jpg" align ="left"></a>武汉肺炎病毒已证实能够人传人，当下应如何有效防堵疫情扩散？中研院院士、被台湾学界誉为“冠状病毒之父”的赖明诏接受大纪元专访表示，冠状病毒容易突变，导致危险性增加，做好隔离、重视戴口罩是预防关键。赖明诏表示，如果病毒进入人传人阶段，可能引起大爆发。冠状病毒属于RNA病毒，多来自于蝙蝠，RNA病毒极易发生基因突变。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 2:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎速扩16省市 已死6人</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【持续更新】武汉肺炎速扩20省市 台首现1例</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1097066394-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802852.md#1" target="_blank">在笔尖上雕刻“台北101”超迷你作品令人赞叹</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802852.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/334035b8de2223cb7501361b3bb8d9ee-150x120.jpg" align ="left"></a>微雕艺术的呈现总是令人惊叹，而一位日本创作家Shiloi更是别出心裁，他在铅笔心上面发展出他独特的创意，他将台北的地标101大楼和法国艾菲尔铁塔都摆到铅笔心上面去了，我们来看看他令人赞叹的作品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802899.md#1" target="_blank">鞋子后方“小尾巴”原来有4种用途 你用过吗？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11802899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/956cf27af501b780062a278f777c9edc-150x120.jpg" align ="left"></a>许多运动鞋、板鞋后方都有一个“小尾巴”，可别以为它只是装饰用的；其实“小尾巴”是大有用处的，设计师细心设计让我们更便利使用，我们来看看它要如何使用呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798592.md#1" target="_blank">什么时机该换工作？ 换职前先评估三件事</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6f9dda66ec0465330b59992f2f7d1eef-150x120.jpg" align ="left"></a>新的一年开启新征程，你是否想要离职换岗，谋求更好的发展呢？规划一下换工作的最好时机，让自己“在对的时间做对的事”，以期工作能够越换越好，提高胜率。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 1:00 PM			</td></tr>
@@ -29,7 +32,6 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank">经典年菜料理 (1) ～软嫩多汁的红烧肉</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805380.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f7cf1f5dfb490086f84a57e2de3af341-150x120.jpg" align ="left"></a>好媳妇就要学会这一道经典年菜料理，入口即化、软嫩多汁的红烧肉。
 让人忍不住饭一口接一口～
 炒糖色让红烧肉油亮亮吃起来香甜不死咸，带有淡淡的焦糖香，加入话梅更解腻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 12:01 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800874.md#1" target="_blank">上司要求重做？1结论3理由精准完成工作</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1212251026152382-150x120.jpg" align ="left"></a>确认资料的纲要并无偏误，便能陆续添加内容。这道程序，正是预防“全部重做”的关键。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809762.md#1" target="_blank">日本住友林业收购珀斯建商Scott Park</a><br></h3>日本跨国公司住友林业（Sumitomo Forestry）近日收购了珀斯最大建筑商之一斯科特帕克集团（Scott Park Group）的控股权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809752.md#1" target="_blank">新加坡鸿运控股重建珀斯喜来登酒店</a><br></h3>一间新加坡上市房地产开发商提出了一项2.9亿澳元的提案，拟重新开发珀斯福朋喜来登酒店（Four Points by Sheraton Hotel），并在相邻街区建设2座包含公寓和写字间的新楼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 4:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809592.md#1" target="_blank">珀斯AMP大楼锁定长期租户</a><br></h3>安保资本（AMP Capital）所拥有的圣乔治大道140号（140 St Georges Terrace）守住了4层租户，使该写字楼空置率下降至1%以下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 3:45 PM			</td></tr>
