--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4a.hua.midnightchannel.net/hua/7" rel="nofollow">´ó¼ÍÔª</a> | <a href="http://san4a.hua.midnightchannel.net/hua/513" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="http://san4a.hua.midnightchannel.net/hua/8" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="http://san4a.hua.midnightchannel.net/hua/4" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="http://san4a.hua.midnightchannel.net/hua/11" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="http://san4a.hua.midnightchannel.net/hua/3" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="http://san4a.hua.midnightchannel.net/hua/9" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="http://san4a.hua.midnightchannel.net/hua/5" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809515.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1O242V-320x200.jpg">ÖÐ¹²Ç°¹«°²²¿¸±²¿³¤ÃÏºêÎ°±»ÅÐ13Äê°ë</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809933.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1194134345-320x200.jpg">Îäºº¿ªÊ¼·â³Ç Ç§ÍòÈË¿Ú½ö61¼Ò·¢ÈÈÃÅÕï</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11796241.md#1">ÒÁÀÊÔÚ±äÌì ÖÐ¹²»òÊ§È¥´ò»÷ÃÀ¹úµÄÍõÅÆ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805480.md#1">Îäººµ½µ×ÓÐ¶àÉÙÈËËÀÓÚÐÂÐÍ¹Ú×´²¡¶¾£¿</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11801973.md#1">¿ªºÀ³µÈë¹Ê¹¬ÈÇÒé ¡°Â¶Ð¡±¦¡±×Ô³ÆÊÇºìÈý´ú</a><br>
@@ -7,7 +7,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801219.md#1">´óÂ½¶à×ù³ÇÊÐÒ½ÔºÆô¶¯Ò»¼¶·À»¤ ´«Ò½»¤ÖÐÕÐ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793300.md#1">¡¾ÐÂÎÅ¿´µã¡¿ÖÐÃÀ³õ½×¶ÎÃ³Ð­ÆØ¹â ±±¾©´óÈÃ²½</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1">Ï°Òé¡°Áìµ¼¸üÌæ¡± ÃÀÃ½£º±±¾©ÏÝ½Ó°àÈË¹ÖÈ¦</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11793980.md#1">¡¾ÌÆ¾¸Ô¶¿ìÆÀ¡¿ÎäÍ³Ì¨Íå£¿ÖÐ¹²¿ÖÓÐÐÄÎÞÁ¦</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805440.md#1">¹Ê¹¬±¼³ÛÅ®±»±¬£º´÷Ç§ÍòÃû±í ×¡±±¾©ºÀÕ¬</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nscrw413.md#1">¸ü¶à......</a></p><hr><h2><p><strong>½ñÈÕÆÀÂÛ</strong></p></h2>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809863.md#1">³ÂË¼Ãô£ºÎäººÐÂÐÍ·ÎÑ×ÌØµã ÖÐ¹ú×¨¼ÒËµµÄÓëÃ»ËµµÄ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808445.md#1">ÖÐ¹²´ÓáÈÆðµ½ÊÕÁ²£ºÃÀÖÐÃ³Ì¸ËµÃ÷ÁËÊ²Ã´£¿</a><br>
@@ -30,25 +30,26 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778295.md#1">ÒÁÀÊµ¼µ¯Ï®»ùµØ ÃÀ¹ú¹ú·À²¿ÅûÂ¶¸ü¶àÏ¸½Ú</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810222.md#1">Îäºº·ÎÑ×³å»÷¸Û¹É ºãÖ¸ÏÂ´ì810µã</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809123.md#1">¡¾·­Ç½±Ø¿´¡¿»¤Ê¿±»µ÷Ç°Ïß ÎäººÒßÇéÓÐ¶àÑÏÖØ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810092.md#1">ÎÚº½¿Í»ú±»»÷Âä ÒÁÀÊ³ÐÈÏ·¢ÉäÁË2Ã¶µ¼µ¯</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11810001.md#1">Îäºº·ÎÑ×¼±ËÙÂûÑÓ ×¨¼Ò£º¡°¶¾Íõ¡±»òÒÑ³öÏÖ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809922.md#1">´¨ÆÕ£ºÃÀÖÐÐ­Òé¿ªÆô21ÊÀ¼ÍÃ³Ò×ÐÂÄ£Ê½</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809332.md#1">³ÌÏþÈÝ£ºÏ°½üÆ½Òª¶ôÖÆÎäººÒßÇé ²¡¶¾Ô´Í·ºÎÔÚ</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809515.md#1">ÖÐ¹²Ç°¹«°²²¿¸±²¿³¤ÃÏºêÎ°±»ÅÐ13Äê°ë</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809339.md#1">Îäºº·ÎÑ×È·¶¨ÈË´«ÈË ÖÐ¹²Â÷²»×¡Î©ÈýÒ×Æä¿Ú</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807613.md#1">ÎäººÎ´»é»¤Ê¿±»³éµ÷Ö§Ô®ºôÎü¿Æ ÍøÃñ£º²»¹«Æ½</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11808930.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿Îäºº·ÎÑ×»ò¸üÖØ ´Ë¿Ì»¹Ðè½¯ÑåÓÀ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806338.md#1">ÍõºÕ£º¡°ÈËÃñÁìÐä¡±ÅõÉ±Ï°½üÆ½£¿</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808274.md#1">ÖÐ¹²´óÊ¹ÏòµÂÆó¼¯×ÊÎÞ¹û ÐÎÏó¹¤³Ì¸æ´µ</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808546.md#1">GDP¡°±£6¡±²»Ò× Ñ§Õß£º´óÂ½¾­¼ÃÃæÁÙ6´óÄÑÌâ</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808648.md#1">Ê×Î»ÔÚ»ªÍâ¹úÈËÈ¾·ÎÑ× Ó¡¶È¼®½ÌÊ¦ÉîÛÚ×¡Ôº</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808152.md#1">ÁÉÄþÅ®×Ó¼àÓüÀîÎÄ²©ÆÈº¦·¨ÂÖ¹¦Ñ§Ô±µÄ¶ñÐÐ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809808.md#1">Îäºº·ÎÑ×À©É¢16Ê¡ÊÐ´ï291×ÚËÀÍö6Àý</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809508.md#1">Îäºº·ÎÑ×ÔÙÀ©É¢ ¹óÑô´óÁ¬ÏÖÒÉËÆ²¡Àý</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809498.md#1">´«ÉÏº£ÔÙÌí·ÎÑ×²¡Àý ¼ÎÀïÖÐÐÄ£ºÒÉËÆ·Î½áºË</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809403.md#1">ÉæÇ®É«½»Ò× ¼ªÁÖ°×³ÇÔ­Õþ·¨Î¯Êé¼Ç±»Ë«¿ª</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809317.md#1">³öÏÖÎäºº·ÎÑ×ÒÉËÆ²¡Àý °ÄÖÞ½«¶ÔÎäººÂÃ¿ÍÉ¸¼ì</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809014.md#1">ÖÐ¹úÎäºº·ÎÑ×È·Õï²¡Àý³¬200Àý °üÀ¨ÔÐ¸¾</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">¡¾³ÖÐø¸üÐÂ¡¿Îäºº·ÎÑ×ËÙÀ©16Ê¡ÊÐ ÒÑËÀ6ÈË</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801312.md#1">¡¾³ÖÐø¸üÐÂ¡¿Îäºº·ÎÑ×ËÙÀ©20Ê¡ÊÐ Ì¨Ê×ÏÖ1Àý</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809025.md#1">Îäºº·ÎÑ×±¬·¢ Ì¨Ò½ÉúÊ¾¾¯´«È¾Á¦±ÈÈøË¹Ç¿</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809168.md#1">ÖÐ¹ú´ºÔËÈË³±Ó¿ÏÖ Îäºº·ÎÑ×ÒßÇéÀ©É¢·çÏÕÔö</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809138.md#1">SARSÒõÓ°ÓÌÔÚ Ïã¸Û¶ÔÎäºº·ÎÑ×Ìá¸ß¾¯¾õ</a><br>
@@ -63,6 +64,8 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808545.md#1">Îäºº·ÎÑ×²¡Àý±©Ôö ÄãÐèÒªÁË½âµÄ10¼þÊÂ</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808682.md#1">Îäºº·ÎÑ×»¼Õß¼¤Ôö ÅàÑµ»ú¹¹Í£¿ÎÓÐÆóÒµÍ£¹¤</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808739.md#1">Îäºº·ÎÑ×ÈË´«ÈË ´ºÔËÆÚ·ÀÒß¿Ö±ÈÈøË¹ÑÏ¾þ</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808546.md#1">GDP¡°±£6¡±²»Ò× Ñ§Õß£º´óÂ½¾­¼ÃÃæÁÙ6´óÄÑÌâ</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808648.md#1">Ê×Î»ÔÚ»ªÍâ¹úÈËÈ¾·ÎÑ× Ó¡¶È¼®½ÌÊ¦ÉîÛÚ×¡Ôº</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808595.md#1">Îäºº·ÎÑ×¼±ËÙÀ©´ó ÃñÖÚÅúÕþ¸®´ËÇ°Â÷±¨ÒßÇé</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11808602.md#1">ÖÐ¹ú°ÙÄêÃûÐ£·×·×ÂÙÏÝ Ð£ÕÂ±»ÆÈ¼Ó¡°µ³Áìµ¼¡±</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807920.md#1">ÐÂ½®¿â¶ûÀÕÔ­¿Õ¾ü¾ü¹ÙÍõ¸£¾ü·òÆÞµÄÔâÓö</a><br>
@@ -85,15 +88,12 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807963.md#1">Îäºº·ÎÑ×È·ÈÏÈË´«ÈË ÊÀÎÀÍÆ¹ã×Ô±£Ô¤·À´ëÊ©</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">Îäºº·ÎÑ×±¬·¢ ÖÓÄÏÉ½È·ÈÏÈË´«ÈË Ï°Àî·¢»°</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807950.md#1">¹ãÖÝ°ËÔºÈ¡ÏûÐÝ¼Ù ×¼±¸ÊÕÖÎÐÂÐÍ·ÎÑ×»¼Õß</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807823.md#1">¡¾ÐÂÎÅ¿´µã¡¿Õ½ÀÇÍâ½»ÔÙÅö±Ú ÈðµäÓûÖð¹ð´ÓÓÑ</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807842.md#1">Ò»ÃûÓ¢¹úÄÐ×ÓÔÚÌ©¹ú¸ÐÈ¾·ÎÑ×</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807708.md#1">Ì¨ÖÇ¿â©UÖÐ¹²½éÑ¡Ê§°Ü »òÕû¶Ù¹úÌ¨°ì</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ"><br>ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³"><br>¾ÅÆÀ¹²²úµ³</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ"><br>¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö""><br>ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯"><br>¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì"><br>Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°"><br>Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª"><br>ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½"><br>ÌúÖ¤ÈçÉ½</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ"><br>Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦"><br>µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ"><br>ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá"><br>Ë«³ÇÑªÀá</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤"><br>ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720"><br>´Ó610µ½720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ"><br>ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý"><br>ÆÊÎö1400Àý</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà"><br>ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó"><br>±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513"><br>¼ûÖ¤513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ"><br>¹¦·ò Ñ°µÀ</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£"><br>¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ"><br>ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ"><br>ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²"><br>Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"><br>ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"><br>¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"><br>Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨"><br>303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"><br>º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"><br>Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/crlhi259/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"><br>²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804926.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-700x366-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804926.md#1">ÔøÔâÔ©Óü8Äê ·¨ÂÖ¹¦Ñ§Ô±Ï¯Ë¨Ê¡±»ÆÈº¦ÖÂËÀ</a><br>ÉÂÎ÷Ê¡±¦¼¦ÊÐÎ¼±õÇøÊ¯°ÓºÓÕò·¨ÂÖ¹¦Ñ§ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806625.md#1">¿´ÊØËù²»¸ø¿´²¡³ÔÒ© ÉÏº£89ËêÀÏÈË¾øÊ³¿¹Òé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806368.md#1">¡¾Ô¤¸æ¡¿ÐÂÌÆÈË½«¶Ô´óÂ½¶À¼Ò²¥³öÉñÔÏÍí»á</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">¡¾Ë¼ÏëÁìÐä¡¿³ÂÈÕ¾ý£º¸Û¸®Ö»ÊÇÒ»¸ö¿þÀÜ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1">¸Û¾¯ÔÙ·Åµ¯ ÖÐ¹²ÌôÐÆÊÀ½ç ÁÏÏÆ¹ú¼ÊÖÆ²Ã³±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805538.md#1">ÖÐ¹²×îÐÂÈË¿ÚÊý¾Ý ³öÉú¡¢ËÀÍöÈËÊý¶¼ÊÜÖÊÒÉ</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809460.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/G21A1808-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809460.md#1">°ÙÄêÀÏµêÉ½¶«°¢½º¿÷Ëð4.5ÒÚ</a><br>´óÂ½¶«°¢°¢½º¹É·ÝÓÐÏÞ¹«Ë¾1ÔÂ19ÈÕ·¢² ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806369.md#1">¸ÐÐ»Å©ÃñÖ§³Ö ´¨ÆÕ£º½«´ÙÖÐ·½Ö´ÐÐÃ³Ò×Ð­Òé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1">´Ó¡°½üº£¡±µ½¡°Á½¼«¡± ÖÐ¹²º£¾üÕ½ÂÔÄÚÄ»</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1">´óÂ½ÂÃÓÎÒµÏôÌõ ¡°Í¾Å£Íø¡±¿÷Ëð²ÃÔ±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805504.md#1">ÖÐ¿ÆÔº¡°Ä¾À¼¡±±à³ÌÓïÑÔ³­Ï®Python</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805332.md#1">´óÂ½¡°¶«°¢°¢½º¡±24ÄêÊ×¿÷ Ô¤¿÷³¬3ÒÚ</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/ae661f228ee5f45211186f07cf50ec2a-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1">¡¾·­Ç½±Ø¿´¡¿Ôþ¹Ê¹¬ºìÈý´úÒÉµ½ÃÀ¹ú ÔÙìÅ¸»</a><br>´ó¼ÍÔªÃ¿ÌìÎª¶ÁÕßÊáÀí·­Ç½±Ø¿´µÄÎÄÕÂ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">¿¯¡°È¢ÁõÒà·Æ¿ÉÐÐÐÔ±¨¸æ¡±ÖÐ¹²·¨ÖÆÆÚ¿¯ÈÇÒé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800232.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿ÖÐÃÀÃ³Ð­ÄÑÂäÊµ ´¨ÆÕÁíÓÐ´óÕ½ÂÔ£¨1£©</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806673.md#1">ÃÀÑ§Õß£ºÌ¨Ñ¡¾Ù½á¹ûÊÇ¶àÊýÌ¨ÍåÈË³¹µ×Ê¤Àû</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805546.md#1">ÈîÃñ°²ÊÜÑûÎªÌìÏÂÖÆ²Ã¼¯»áÏ×³ª Í»Ôâ¸Û¾¯×èÖ¹</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805358.md#1">ÓëÔþ¹Ê¹¬ºìÈý´úÍ¬ÃûÔâÂî Å®ÐÇ¸ßÂ¶ÎÞ¹¼ÌÉÇ¹</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/EOtRzs2UUAEPi48-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1">±±¾©³¯ÑôÒ½ÔºÒ½Éú±»¿³Êýµ¶ Ò½»¤¼°ÊÐÃñÒà±»ÉË</a><br>±±¾©ÔÙ·¢ÉúÒ½Éú±»Ï®»÷ÊÂ¼þ£¬1ÔÂ20ÈÕÏ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806229.md#1">¿ªºÀ³µÓÎ¹Ê¹¬ ºìÈý´ú±»½Ò¿¼ÊÔÎ¥¹æ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806367.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2020/01/19£©</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1">Ì«¹óÅÂ±»Íµ£¿Å©Ãñ±³×ÅÖí¸ûÌï Ð¦·­ÍøÂç</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805440.md#1">¹Ê¹¬±¼³ÛÅ®±»±¬£º´÷Ç§ÍòÃû±í ×¡±±¾©ºÀÕ¬</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">³ÌÏþÈÝ£ººìÈý´ú³µÈë¹Ê¹¬ ´óÂ½Éç»á»ûÐÎÎÞµ×Ïß</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805294.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/25fbb2f57165dc7e399d0608063295e3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805294.md#1">ÑëÊÓÎÄ¼þÆØ¹â ÇÀÕ¼¹ú¼ÊÓßÂÛÕóµØ ¼Ó´óÏ´ÄÔ</a><br>ÖÐ¹²ÑëÊÓÒ»·ÝÎÄ¼þ±¬¹â£¬ÅûÂ¶ÁËÖÐ¹²½ñ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803287.md#1">´¨ÆÕÕþ¸®ÍÆ¶¯ÏÂ ÃÀ¹ú×îÔç¿××ÓÑ§Ôº½«¹Ø±Õ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1">¸ßÐ£½«ÍÆ¡°Ç¿»ù¼Æ»®¡± Ñ§Õß£ºÎ¬³ÖÖÐ¹²Í³ÖÎ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1">ÃÀ±¨¸æÆØ¹â£ºÖÐ¹²ÆóÍ¼Ó°ÏìÈ«ÇòÃ½ÌåÐÂÕÐÊõ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793721.md#1">´«¼Ç¡¶´©Í¸Òõö²µÄÎèµ¸¡·¶Áºó¸Ð</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796950.md#1">ÉîÛÚÒ»Ñ§Ð£Ç¿ÊÕÎçÍÐ·Ñ ¼Ò³¤ÌáËßÇó±»ÍþÐ²</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-912439212-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1">ÃÀ²ÎÒéÔ±ºôÓõµÖÖÆÖÐ¹²¼àÓüÅ«¹¤ÖÆÆ·</a><br>ÃÀ¹ú¹ú»á²ÎÒéÔ±ÌáÐÑÏû·ÑÕß£¬µÖÖÆÖÐ¹² ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11779813.md#1">ÖÐ¹²·¸ÏÂ·´ÈËÀà×ï ÃÀ¹ú»á±¨¸æ´ÙÖÆ²Ã</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/3/n11765947.md#1">Ç°¸ß¹ÜÅÚºä¹È¸èÖÐ¹úÏîÄ¿£ºÖØÀûÇáÈËÈ¨</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11758321.md#1">°²È«µ£ÓÇ ÃÀÂ½¾ü½ôËæº£¾ü½ûÓÃTikTok</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/07/101126024504731-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1">Îäºº·ÎÑ× Ê×ÅúÎäººÖ±·É³Ë¿ÍÔÚÅ¦Ô¼ÂäµØÊÜ¼ì</a><br>ÃÀ¹ú¼²²¡Ô¤·À¿ØÖÆÖÐÐÄ£¨CDC£©ÖÜÎå£¨1 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798118.md#1">ÉÏº£Á½»á ·ÃÃñµ½¾Ù±¨µãÍ¶µÝ²ÄÁÏ ¶àÈË±»×¥</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794386.md#1">¸÷Ê¡Á½»áÁÙ½ü ±±¾©ÐÅ·Ã¾ÖÇå³¡ ·ÃÃñ±»¿ØÖÆ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11780313.md#1">ÖØÇì·ÃÃñÏÕÔâ°ó¼Ü Ê©¾ÈÕßÈýÈË±»¾¯·½´ø×ß</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11769412.md#1">ÎÞÎý·ÃÃñÁªÊð¡°¸ø»ÆÇÕÊé¼ÇµÄ¹«¿ªÐÅ¡±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11760851.md#1">2020È«Ãæ±¼Ð¡¿µ£¿·ÃÃñ£ºÀá±¼</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804926.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1-700x366-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804926.md#1">ÔøÔâÔ©Óü8Äê ·¨ÂÖ¹¦Ñ§Ô±Ï¯Ë¨Ê¡±»ÆÈº¦ÖÂËÀ</a><br>ÉÂÎ÷Ê¡±¦¼¦ÊÐÎ¼±õÇøÊ¯°ÓºÓÕò·¨ÂÖ¹¦Ñ§ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806625.md#1">¿´ÊØËù²»¸ø¿´²¡³ÔÒ© ÉÏº£89ËêÀÏÈË¾øÊ³¿¹Òé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806368.md#1">¡¾Ô¤¸æ¡¿ÐÂÌÆÈË½«¶Ô´óÂ½¶À¼Ò²¥³öÉñÔÏÍí»á</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11761234.md#1">¡¾Ë¼ÏëÁìÐä¡¿³ÂÈÕ¾ý£º¸Û¸®Ö»ÊÇÒ»¸ö¿þÀÜ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805767.md#1">¸Û¾¯ÔÙ·Åµ¯ ÖÐ¹²ÌôÐÆÊÀ½ç ÁÏÏÆ¹ú¼ÊÖÆ²Ã³±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805538.md#1">ÖÐ¹²×îÐÂÈË¿ÚÊý¾Ý ³öÉú¡¢ËÀÍöÈËÊý¶¼ÊÜÖÊÒÉ</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809460.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/G21A1808-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/21/n11809460.md#1">°ÙÄêÀÏµêÉ½¶«°¢½º¿÷Ëð4.5ÒÚ</a><br>´óÂ½¶«°¢°¢½º¹É·ÝÓÐÏÞ¹«Ë¾1ÔÂ19ÈÕ·¢² ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806369.md#1">¸ÐÐ»Å©ÃñÖ§³Ö ´¨ÆÕ£º½«´ÙÖÐ·½Ö´ÐÐÃ³Ò×Ð­Òé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/29/n11753795.md#1">´Ó¡°½üº£¡±µ½¡°Á½¼«¡± ÖÐ¹²º£¾üÕ½ÂÔÄÚÄ»</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805786.md#1">´óÂ½ÂÃÓÎÒµÏôÌõ ¡°Í¾Å£Íø¡±¿÷Ëð²ÃÔ±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805504.md#1">ÖÐ¿ÆÔº¡°Ä¾À¼¡±±à³ÌÓïÑÔ³­Ï®Python</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805332.md#1">´óÂ½¡°¶«°¢°¢½º¡±24ÄêÊ×¿÷ Ô¤¿÷³¬3ÒÚ</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807823.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2016/05/1605011048162192-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807823.md#1">¡¾ÐÂÎÅ¿´µã¡¿Õ½ÀÇÍâ½»ÔÙÅö±Ú ÈðµäÓûÖð¹ð´ÓÓÑ</a><br>ÈÕÇ°£¬ÖÐ¹²×¤Èðµä´óÊ¹¹ð´ÓÓÑÅúÆÀÈðµä ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807708.md#1">Ì¨ÖÇ¿â©UÖÐ¹²½éÑ¡Ê§°Ü »òÕû¶Ù¹úÌ¨°ì</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1">¡¾·­Ç½±Ø¿´¡¿Ôþ¹Ê¹¬ºìÈý´úÒÉµ½ÃÀ¹ú ÔÙìÅ¸»</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">¿¯¡°È¢ÁõÒà·Æ¿ÉÐÐÐÔ±¨¸æ¡±ÖÐ¹²·¨ÖÆÆÚ¿¯ÈÇÒé</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800232.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿ÖÐÃÀÃ³Ð­ÄÑÂäÊµ ´¨ÆÕÁíÓÐ´óÕ½ÂÔ£¨1£©</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806673.md#1">ÃÀÑ§Õß£ºÌ¨Ñ¡¾Ù½á¹ûÊÇ¶àÊýÌ¨ÍåÈË³¹µ×Ê¤Àû</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/EOtRzs2UUAEPi48-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1">±±¾©³¯ÑôÒ½ÔºÒ½Éú±»¿³Êýµ¶ Ò½»¤¼°ÊÐÃñÒà±»ÉË</a><br>±±¾©ÔÙ·¢ÉúÒ½Éú±»Ï®»÷ÊÂ¼þ£¬1ÔÂ20ÈÕÏ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806229.md#1">¿ªºÀ³µÓÎ¹Ê¹¬ ºìÈý´ú±»½Ò¿¼ÊÔÎ¥¹æ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806367.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2020/01/19£©</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805938.md#1">Ì«¹óÅÂ±»Íµ£¿Å©Ãñ±³×ÅÖí¸ûÌï Ð¦·­ÍøÂç</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805440.md#1">¹Ê¹¬±¼³ÛÅ®±»±¬£º´÷Ç§ÍòÃû±í ×¡±±¾©ºÀÕ¬</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804572.md#1">³ÌÏþÈÝ£ººìÈý´ú³µÈë¹Ê¹¬ ´óÂ½Éç»á»ûÐÎÎÞµ×Ïß</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805294.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/25fbb2f57165dc7e399d0608063295e3-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805294.md#1">ÑëÊÓÎÄ¼þÆØ¹â ÇÀÕ¼¹ú¼ÊÓßÂÛÕóµØ ¼Ó´óÏ´ÄÔ</a><br>ÖÐ¹²ÑëÊÓÒ»·ÝÎÄ¼þ±¬¹â£¬ÅûÂ¶ÁËÖÐ¹²½ñ ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803287.md#1">´¨ÆÕÕþ¸®ÍÆ¶¯ÏÂ ÃÀ¹ú×îÔç¿××ÓÑ§Ôº½«¹Ø±Õ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801609.md#1">¸ßÐ£½«ÍÆ¡°Ç¿»ù¼Æ»®¡± Ñ§Õß£ºÎ¬³ÖÖÐ¹²Í³ÖÎ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801398.md#1">ÃÀ±¨¸æÆØ¹â£ºÖÐ¹²ÆóÍ¼Ó°ÏìÈ«ÇòÃ½ÌåÐÂÕÐÊõ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793721.md#1">´«¼Ç¡¶´©Í¸Òõö²µÄÎèµ¸¡·¶Áºó¸Ð</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796950.md#1">ÉîÛÚÒ»Ñ§Ð£Ç¿ÊÕÎçÍÐ·Ñ ¼Ò³¤ÌáËßÇó±»ÍþÐ²</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807842.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1194364595-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807842.md#1">Ò»ÃûÓ¢¹úÄÐ×ÓÔÚÌ©¹ú¸ÐÈ¾·ÎÑ×</a><br>Ò»ÃûÓ¢¹ú¼®ÄÐ×ÓÔÚÌ©¹ú¸ÐÈ¾·ÎÑ×£¬Æä¼Ò ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/14/n11793171.md#1">ÃÀ²ÎÒéÔ±ºôÓõµÖÖÆÖÐ¹²¼àÓüÅ«¹¤ÖÆÆ·</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11779813.md#1">ÖÐ¹²·¸ÏÂ·´ÈËÀà×ï ÃÀ¹ú»á±¨¸æ´ÙÖÆ²Ã</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/3/n11765947.md#1">Ç°¸ß¹ÜÅÚºä¹È¸èÖÐ¹úÏîÄ¿£ºÖØÀûÇáÈËÈ¨</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/31/n11758321.md#1">°²È«µ£ÓÇ ÃÀÂ½¾ü½ôËæº£¾ü½ûÓÃTikTok</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/07/101126024504731-150x120.jpg"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/18/n11803040.md#1">Îäºº·ÎÑ× Ê×ÅúÎäººÖ±·É³Ë¿ÍÔÚÅ¦Ô¼ÂäµØÊÜ¼ì</a><br>ÃÀ¹ú¼²²¡Ô¤·À¿ØÖÆÖÐÐÄ£¨CDC£©ÖÜÎå£¨1 ...<br><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798118.md#1">ÉÏº£Á½»á ·ÃÃñµ½¾Ù±¨µãÍ¶µÝ²ÄÁÏ ¶àÈË±»×¥</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794386.md#1">¸÷Ê¡Á½»áÁÙ½ü ±±¾©ÐÅ·Ã¾ÖÇå³¡ ·ÃÃñ±»¿ØÖÆ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11780313.md#1">ÖØÇì·ÃÃñÏÕÔâ°ó¼Ü Ê©¾ÈÕßÈýÈË±»¾¯·½´ø×ß</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/5/n11769412.md#1">ÎÞÎý·ÃÃñÁªÊð¡°¸ø»ÆÇÕÊé¼ÇµÄ¹«¿ªÐÅ¡±</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/1/n11760851.md#1">2020È«Ãæ±¼Ð¡¿µ£¿·ÃÃñ£ºÀá±¼</a><br><br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
-- ¹² 350,228,709 ÈË
+- ¹² 350,235,651 ÈË
 ```
 </strong>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11754554.md#1">ÐÂÔª¸³¡ª¡ªÍËµ³ÖÐÐÄ2020ÐÂÄê¼ÄÓï</a><br>
